--- a/.env.prod
+++ b/.env.prod
@@ -2,8 +2,15 @@
 MYSQL_ROOT_HOST=%
 MYSQL_ROOT_PASSWORD=secret
 
-## Remote Host
-SSH_HOST=
-SSH_PORT=
-SSH_USER=
-SSH_PASSWORD=
+## Deploy Host
+SSH_HOST=192.168.1.100
+SSH_PORT=22
+SSH_USER=root
+SSH_PASSWORD=secret
+
+## Backup Host
+SMB_HOST=192.168.1.100
+SMB_USER=root
+SMB_PASSWORD=secret
+SMB_SHARE=share
+SMB_PATH=/backup
