--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - DB_PASS=${MYSQL_ROOT_PASSWORD}
       - SINGLE_DATABASE=true
       - DB_DUMP_BY_SCHEMA=true
+      - DB_DUMP_FREQ=10080
+      - DB_DUMP_BEGIN=0300
       - DB_DUMP_TARGET=smb://${SMB_HOST}/${SMB_SHARE}${SMB_PATH}
       - SMB_USER=${SMB_USER}
       - SMB_PASS=${SMB_PASSWORD}
