--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     image: databack/mysql-backup
     environment:
       - DB_SERVER=mysql
+      - DB_PORT=3306
       - DB_USER=root
       - DB_PASS=${MYSQL_ROOT_PASSWORD}
       - SINGLE_DATABASE=true
